各ページのデザイン修正

--- a/graphic.html
+++ b/graphic.html
@@ -23,7 +23,6 @@
 </head>
 
 <body id="top">
-	<canvas id="bubbleCanvas"></canvas>
 		<div id="wrap" class="content">
 			<header>
 				<div id="app">
@@ -60,7 +59,7 @@
 			</main>
 			<footer>
 				<p id="pageTop"><a href="#top"><img src="images/logo.png" alt="ページトップ"></a></p>
-				<p class="copyright"><small>&copy;2025 Murai Mayu All Rights Reserved.</small></p>
+				<p class="copyright"><small>&copy;2025</small></p>
 			</footer>
 			<aside id="sideMenu">
 				<input type="checkbox" id="drawer-checkbox">
