--- a/aboutm.html
+++ b/aboutm.html
@@ -23,7 +23,6 @@
 </head>
 
 <body id="top">
-	<canvas id="bubbleCanvas"></canvas>
 		<div id="wrap" class="content">
 			<header>
 				<div id="app">
@@ -34,8 +33,8 @@
 				<div id="contentsWrap">
 					<div class="resumeContainer">
 						<section class="textArea">
-							<h2 class="circle-heading">経歴
-							</h2>
+							<h3 class="circle-heading">経歴
+							</h3>
 							<p class="description">
 							職業訓練校でレスポンシブデザイン対応のWordPressオリジナルテーマ制作を学ぶ<br>
 							WEB制作会社での企業実習においてコーディングやSEO対策も経験<br>
@@ -44,11 +43,11 @@
 							</p>
 						</section>
 						<section class="textArea">
-							<h2 class="circle-heading">使用言語<br>DB</h2>
+							<h3 class="circle-heading">使用言語<br>DB</h3>
 							<p class="description">HTML5・CSS3・JavaScript・jQuery・PHP・MySQL</p>
 						</section>
 						<section class="textArea">
-							<h2 class="circle-heading">使用アプリ</h2>
+							<h3 class="circle-heading">使用アプリ</h3>
 							<p class="description"> Illustrator CC ・ Photoshop CC ・ Dreamweaver・VS CODE</p>
 						</section>
 					</div>
@@ -57,7 +56,7 @@
 			</main>
 			<footer>
 				<p id="pageTop"><a href="#top"><img src="images/logo.png" alt="ページトップ"></a></p>
-				<p class="copyright"><small>&copy;2025 Murai Mayu All Rights Reserved.</small></p>
+				<p class="copyright"><small>&copy;2025</small></p>
 			</footer>
 			<aside id="sideMenu">
 				<input type="checkbox" id="drawer-checkbox">
