背景と白いボックス固定

--- a/index.html
+++ b/index.html
@@ -26,10 +26,16 @@
 <script src="js/background.js"></script>
 <script src="js/gitem-animation.js"></script>
 
+<style>
+
+
+
+</style>
+
 </head>
 
-<body id="top">
-	<div id="wrap" class="content">
+<body id="top" class="background">
+	<div id="wrap">
 		<header>
 			<h1 class="ballet-heading">Murai Mayu's<span class="heading-bigger">Portfolio</span></h1>
 			<h2>村井麻優のポートフォリオサイト</h2>
@@ -50,6 +56,7 @@
 			</aside>
 		</header>
 		<main>
+			<div class="fixed-box"></div>
 			<div id="contentsWrap">
 				<div class="thumbnailArea">
 					<div class="gitem item">
