indexにコンテンツ追加

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 					<ul class="menuCont">
 						<li><a href="index.html">Top</a></li>
 						<li class="miniImage01"><a href="https://mmewandii.stars.ne.jp/wp/" target="_blank" rel="noopener noreferrer">WordPress</a></li>
-						<li class="miniImage02"><a href="graphic.html">Graphic</a></li>
+						<li class="miniImage02"><a href="graphic.html">Design</a></li>
 						<li class="miniImage03"><a href="aboutm.html">About Me</a></li>
 					</ul>
 				</nav>
@@ -58,33 +58,102 @@
 		<main>
 			<div class="fixed-box"></div>
 			<div id="contentsWrap">
-				<div class="thumbnailArea">
-					<div class="gitem item">
-						<a href="https://mmewandii.stars.ne.jp/wp/" target="_blank" rel="noopener noreferrer">
-							<img src="images/wordpressthumbnail.png" alt="WordPressサイトサムネイル" class="miniImage01">
-							<h3 class="itemTitle">WordPress</h3>
-						</a>
-						<div class="tooltip">WordPressで作ったサイト</div>
-					</div><!--/.gitem-->
-					<div class="gitem item">
-						<a href="graphic.html">
-							<img src="images/graphicthumbnail.png" alt="グラフィック作品サムネイル" class="miniImage02">
-							<h3 class="itemTitle">Graphic</h3>
-						</a>
-						<div class="tooltip">イラレ・フォトショ使用画像</div>
-					</div><!--/.gitem-->
-					<div class="gitem item">
-						<a href="aboutm.html">
-						<img src="images/personthumbnail.png" alt="私についてサムネイル" class="miniImage03">
-						<h3 class="itemTitle">About Me</h3></a>
-						<div class="tooltip">経歴・使用言語など</div>
-					</div><!--/.gitem-->
-				</div><!--/.thumbnailArea-->
-				<div class="showArea">
-					<div id="showArea">
-						<img src="images/mewandithumbnail500.png" alt="" >
-					</div><!--/#showArea-->
-				</div>
+				<section class="firstviewArea">
+					<div class="top-thumbnailArea">
+						<div class="gitem item">
+							<a href="https://mmewandii.stars.ne.jp/wp/" target="_blank" rel="noopener noreferrer">
+								<img src="images/wordpressthumbnail.png" alt="WordPressサイトサムネイル" class="miniImage01">
+								<h4 class="itemTitle">WordPress</h4>
+							</a>
+							<div class="tooltip">WordPressで作ったサイト</div>
+						</div><!--/.gitem-->
+						<div class="gitem item">
+							<a href="graphic.html">
+								<img src="images/graphicthumbnail.png" alt="グラフィック作品サムネイル" class="miniImage02">
+								<h4 class="itemTitle">Design</h4>
+							</a>
+							<div class="tooltip">イラレ・フォトショ使用画像</div>
+						</div><!--/.gitem-->
+						<div class="gitem item">
+							<a href="aboutm.html">
+							<img src="images/personthumbnail.png" alt="私についてサムネイル" class="miniImage03">
+							<h4 class="itemTitle">About Me</h4></a>
+							<div class="tooltip">経歴・使用言語など</div>
+						</div><!--/.gitem-->
+					</div><!--/.thumbnailArea-->
+					<div class="showArea">
+						<div id="showArea">
+							<img src="images/mewandithumbnail500.png" alt="" >
+						</div><!--/#showArea-->
+					</div><!--/.showArea-->
+				</section>
+				<section class="contentArea">
+					<h3>Web Site</h3>
+					<div class="thumbnailArea">
+						<div class="thumbnailItem">
+							<a href="https://mmewandii.stars.ne.jp/wp/" target="_blank" rel="noopener noreferrer">
+								<img src="https://placehold.jp/250x150.png" alt="WordPressサイトサムネイル" class="miniImage01">
+								<h4 class="itemTitle">WordPressサイト</h4>
+							</a>
+						</div><!--/.thumbnailItem-->
+						<div class="thumbnailItem">
+							<a href="graphic.html">
+								<img src="https://placehold.jp/250x150.png" alt="グラフィック作品サムネイル" class="miniImage02">
+								<h4 class="itemTitle">カフェサイト</h4>
+							</a>
+						</div><!--/.thumbnailItem-->
+						<div class="thumbnailItem">
+							<a href="aboutm.html">
+							<img src="https://placehold.jp/250x150.png" alt="私についてサムネイル" class="miniImage03">
+							<h4 class="itemTitle">ポートフォリオサイト</h4></a>
+						</div><!--/.thumbnailItem-->
+					</div>
+				</section>
+				<section class="contentArea">
+					<h3>Design</h3>
+					<div class="thumbnailArea">
+						<div class="thumbnailItem">
+							<a href="https://mmewandii.stars.ne.jp/wp/" target="_blank" rel="noopener noreferrer">
+								<img src="https://placehold.jp/250x150.png" alt="WordPressサイトサムネイル" class="miniImage01">
+								<h4 class="itemTitle">ショップカード</h4>
+							</a>
+						</div><!--/.thumbnailItem-->
+						<div class="thumbnailItem">
+							<a href="graphic.html">
+								<img src="https://placehold.jp/250x150.png" alt="グラフィック作品サムネイル" class="miniImage02">
+								<h4 class="itemTitle">バナー</h4>
+							</a>
+						</div><!--/.thumbnailItem-->
+						<div class="thumbnailItem">
+							<a href="aboutm.html">
+							<img src="https://placehold.jp/250x150.png" alt="私についてサムネイル" class="miniImage03">
+							<h4 class="itemTitle">イラスト</h4></a>
+						</div><!--/.thumbnailItem-->
+					</div>
+				</section>
+				<section class="contentArea">
+					<h3>About Me</h3>
+					<div class="resumeContainer">
+						<section class="textArea">
+							<h3 class="circle-heading">経歴
+							</h3>
+							<p class="description">
+							職業訓練校でレスポンシブデザイン対応のWordPressオリジナルテーマ制作を学ぶ<br>
+							WEB制作会社での企業実習においてコーディングやSEO対策も経験<br>
+							前職はアプリディレクターとして、ネイティブ・WEBアプリケーション制作の<br>
+							企画・要件定義からテストまでに関わる
+							</p>
+						</section>
+						<section class="textArea">
+							<h3 class="circle-heading">使用言語<br>DB</h3>
+							<p class="description">HTML5・CSS3・JavaScript・jQuery・PHP・MySQL</p>
+						</section>
+						<section class="textArea">
+							<h3 class="circle-heading">使用アプリ</h3>
+							<p class="description"> Illustrator CC ・ Photoshop CC ・ Dreamweaver・VS CODE</p>
+						</section>
+					</div>
+				</section>
 			</div><!--/#contentsWrap-->
 		</main>
 		<footer>
