トップページ修正とJS不要部分削除

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 				<nav id="gNavi">
 					<ul class="menuCont">
 						<li><a href="index.html">Top</a></li>
-						<li class="miniImage01"><a href="https://mmewandii.stars.ne.jp/wp/" target="_blank" rel="noopener noreferrer">WordPress</a></li>
-						<li class="miniImage02"><a href="graphic.html">Design</a></li>
-						<li class="miniImage03"><a href="aboutm.html">About Me</a></li>
+						<li class="miniImage01"><a href="#website">Web Site</a></li>
+						<li class="miniImage02"><a href="#design">Design</a></li>
+						<li class="miniImage03"><a href="#aboutme">About Me</a></li>
 					</ul>
 				</nav>
 			</aside>
@@ -56,9 +56,9 @@
 						<div class="gitem item">
 							<a href="https://mmewandii.stars.ne.jp/wp/" target="_blank" rel="noopener noreferrer">
 								<img src="images/wordpressthumbnail.png" alt="WordPressサイトサムネイル" class="miniImage01">
-								<h4 class="itemTitle">WordPress</h4>
+								<h4 class="itemTitle">Web Site</h4>
 							</a>
-							<div class="tooltip">WordPressで作ったサイト</div>
+							<div class="tooltip">Web Siteで作ったサイト</div>
 						</div><!--/.gitem-->
 						<div class="gitem item">
 							<a href="graphic.html">
@@ -68,7 +68,7 @@
 							<div class="tooltip">イラレ・フォトショ使用画像</div>
 						</div><!--/.gitem-->
 						<div class="gitem item">
-							<a href="aboutm.html">
+							<a href="#aboutme">
 							<img src="images/personthumbnail.png" alt="私についてサムネイル" class="miniImage03">
 							<h4 class="itemTitle">About Me</h4></a>
 							<div class="tooltip">経歴・使用言語など</div>
@@ -80,8 +80,8 @@
 						</div><!--/#showArea-->
 					</div><!--/.showArea-->
 				</section>
-				<section class="contentArea">
-					<h3>Web Site</h3>
+				<section id="website" class="contentArea">
+					<h3 class="animated-heading">Web Site</h3>
 					<div class="thumbnailArea">
 						<div class="thumbnailItem" >
 							<a href="https://mmewandii.stars.ne.jp/wp/" target="_blank" rel="noopener noreferrer" >
@@ -102,8 +102,8 @@
 						</div><!--/.thumbnailItem-->
 					</div>
 				</section>
-				<section class="contentArea">
-					<h3>Design</h3>
+				<section id="design" class="contentArea">
+					<h3 class="animated-heading">Design</h3>
 					<div class="thumbnailArea">
 						<div class="thumbnailItem">
 							<a href="https://mmewandii.stars.ne.jp/wp/" target="_blank" rel="noopener noreferrer">
@@ -124,8 +124,8 @@
 						</div><!--/.thumbnailItem-->
 					</div>
 				</section>
-				<section class="contentArea">
-					<h3>About Me</h3>
+				<section id="aboutme" class="contentArea">
+					<h3 class="animated-heading">About Me</h3>
 					<div class="resumeContainer">
 						<section class="textArea">
 							<h3 class="circle-heading">経歴
