ファーストヴュー画像修正

--- a/index.html
+++ b/index.html
@@ -55,21 +55,21 @@
 					<div class="top-thumbnailArea">
 						<div class="gitem item">
 							<a href="https://mmewandii.stars.ne.jp/wp/" target="_blank" rel="noopener noreferrer">
-								<img src="images/wordpressthumbnail.png" alt="WordPressサイトサムネイル" class="miniImage01">
+							<img src="images/wordpressthumbnailTP.png" alt="WordPressサイトサムネイル" class="miniImage01">
 								<h4 class="itemTitle">Web Site</h4>
 							</a>
 							<div class="tooltip">Web Siteで作ったサイト</div>
 						</div><!--/.gitem-->
 						<div class="gitem item">
 							<a href="graphic.html">
-								<img src="images/graphicthumbnail.png" alt="グラフィック作品サムネイル" class="miniImage02">
+								<img src="images/designthumbnailTP.png" alt="グラフィック作品サムネイル" class="miniImage02">
 								<h4 class="itemTitle">Design</h4>
 							</a>
 							<div class="tooltip">イラレ・フォトショ使用画像</div>
 						</div><!--/.gitem-->
 						<div class="gitem item">
 							<a href="#aboutme">
-							<img src="images/personthumbnail.png" alt="私についてサムネイル" class="miniImage03">
+							<img src="images/personthumbnailTP.png" alt="私についてサムネイル" class="miniImage03">
 							<h4 class="itemTitle">About Me</h4></a>
 							<div class="tooltip">経歴・使用言語など</div>
 						</div><!--/.gitem-->
