--- a/index.html
+++ b/index.html
@@ -145,11 +145,11 @@
 						</section>
 						<section class="textArea">
 							<h3 class="circle-heading">使用言語<br>DB</h3>
-							<p class="description">HTML5・CSS3・JavaScript・jQuery・PHP・MySQL</p>
+							<p class="description shortDescription">HTML5・CSS3・JavaScript・jQuery・PHP・MySQL</p>
 						</section>
 						<section class="textArea">
 							<h3 class="circle-heading">使用アプリ</h3>
-							<p class="description"> Illustrator CC ・ Photoshop CC ・ Dreamweaver・VS CODE</p>
+							<p class="description shortDescription"> Illustrator CC ・ Photoshop CC ・ Dreamweaver・VS CODE</p>
 						</section>
 					</div>
 				</section>
