--- a/orbit-test.html
+++ b/orbit-test.html
@@ -2,25 +2,23 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <title>左半円上を往復する画像 + ホイール操作</title>
+    <title>円周上の画像アニメーション</title>
     <style>
       body {
         margin: 0;
-        background-color: #f0f0f0;
+        background: #f0f0f0;
         display: flex;
         justify-content: center;
         align-items: center;
         height: 100vh;
       }
-
       .wrapper {
         overflow: hidden;
-        width: 200px;
+        width: 300px;
         height: 400px;
+        background: white;
         box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
-        background-color: white;
       }
-
       canvas {
         display: block;
       }
@@ -34,90 +32,87 @@
     <script>
       const canvas = document.getElementById('orbitCanvas');
       const ctx = canvas.getContext('2d');
-      const centerX = canvas.width / 2;
-      const centerY = canvas.height / 2;
+
+      const centerX = 200;
+      const centerY = 200;
       const radius = 120;
-      const imageCount = 4;
+      const imageSize = 40;
+
+      const angleMargin = Math.asin((imageSize / 2 + 4) / radius);
+      const totalArc = 2 * Math.PI * 0.8;
+      const startAngle = Math.PI - totalArc / 2 + angleMargin;
+      const endAngle = Math.PI + totalArc / 2 - angleMargin;
+      const angleRange = endAngle - startAngle;
+
+      const imageSrcs = [
+        'images/websitethumbnail1.png',
+        'images/websitethumbnail2.png',
+        'images/websitethumbnail1.png',
+        'images/websitethumbnail2.png',
+      ];
+
       const images = [];
-      const imagePositions = [];
+      const orbitObjects = [];
 
-      let baseOffset = Math.PI / 2; // 開始位置：上端
-      let direction = 1; // 1 = 順方向, -1 = 逆方向
-      const speed = 0.0002;
-      const minAngle = Math.PI / 2;
-      const maxAngle = (3 * Math.PI) / 2;
-
-      const imageSrcs = Array(imageCount).fill('images/aikirin180.png');
-
-      let loadedImages = 0;
       imageSrcs.forEach((src, i) => {
         const img = new Image();
+        img.crossOrigin = 'anonymous';
         img.src = src;
-        img.onload = () => {
-          loadedImages++;
-          if (loadedImages === imageCount) {
-            for (let j = 0; j < imageCount; j++) {
-              // 各画像の進捗（0~1）
-              imagePositions.push(j / imageCount);
-            }
-            animate();
-          }
-        };
         images.push(img);
+
+        const initialAngle =
+          startAngle + (angleRange * (i + 1)) / (imageSrcs.length + 1);
+        orbitObjects.push({
+          img,
+          angle: initialAngle,
+          speed: 0.01 + Math.random() * 0.005 * (Math.random() > 0.5 ? 1 : -1),
+        });
       });
 
       function animate() {
         ctx.clearRect(0, 0, canvas.width, canvas.height);
 
-        // 半円弧描画（ガイドライン）
+        // 円弧描画
         ctx.beginPath();
+        ctx.arc(centerX, centerY, radius, startAngle, endAngle);
         ctx.strokeStyle = 'black';
         ctx.lineWidth = 2;
-        ctx.arc(centerX, centerY, radius, minAngle, maxAngle, false);
+        ctx.lineCap = 'round';
         ctx.stroke();
 
-        // 各画像の位置更新と描画
-        for (let i = 0; i < imageCount; i++) {
-          // 各画像の相対角度（min〜maxにスケーリング）
-          const angle = baseOffset + imagePositions[i] * Math.PI;
-          const x = centerX + radius * Math.cos(angle);
-          const y = centerY + radius * Math.sin(angle);
+        orbitObjects.forEach((obj) => {
+          // 端に達したら方向を反転
+          if (obj.angle <= startAngle || obj.angle >= endAngle) {
+            obj.speed *= -1;
+          }
+
+          obj.angle += obj.speed;
+
+          const x = centerX + radius * Math.cos(obj.angle);
+          const y = centerY + radius * Math.sin(obj.angle);
 
           ctx.save();
           ctx.translate(x, y);
-          ctx.drawImage(images[i], -20, -20, 40, 40);
+          ctx.drawImage(
+            obj.img,
+            -imageSize / 2,
+            -imageSize / 2,
+            imageSize,
+            imageSize
+          );
           ctx.restore();
-
-          // 進行方向に応じて移動
-          imagePositions[i] += direction * speed;
-
-          // 端に達したら折り返し
-          if (imagePositions[i] >= 1) {
-            imagePositions[i] = 1;
-            direction = -1;
-          } else if (imagePositions[i] <= 0) {
-            imagePositions[i] = 0;
-            direction = 1;
-          }
-        }
+        });
 
         requestAnimationFrame(animate);
       }
 
-      // ✅ ホイールイベント：手動でbaseOffsetを調整
-      canvas.addEventListener(
-        'wheel',
-        (e) => {
-          e.preventDefault();
-          const delta = e.deltaY > 0 ? 1 : -1;
-          baseOffset += delta * 0.05;
-
-          // 左半円（π/2〜3π/2）に制限
-          if (baseOffset < Math.PI / 2) baseOffset = Math.PI / 2;
-          if (baseOffset > (3 * Math.PI) / 2) baseOffset = (3 * Math.PI) / 2;
-        },
-        { passive: false }
-      );
+      let loaded = 0;
+      images.forEach((img) => {
+        img.onload = () => {
+          loaded++;
+          if (loaded === images.length) animate();
+        };
+      });
     </script>
   </body>
 </html>
