--- a/newdesign.html
+++ b/newdesign.html
@@ -112,6 +112,7 @@
                     class="thumbnailImage"
                   />
                   <h3 class="thumbnailTitle">WordPressサイト</h3>
+                  <p class="thumbnailText">aaaaaaaaaa</p>
                 </a>
               </div>
               <!--/.thumbnailItem-->
