モーダル内容追加

--- a/newdesign.html
+++ b/newdesign.html
@@ -105,7 +105,7 @@
             <h2 class="contentsHeading">Web Site</h2>
             <div class="thumbnailArea">
               <div class="thumbnailItem border">
-                <button type="button" data-modal="modal1">
+                <button type="button" data-modal="modal1" class="modalOpen">
                   <img
                     src="images/websitethumbnail1.png"
                     alt="WEBサイト「Mew and I」サムネイル"
@@ -130,24 +130,31 @@
               <div class="modalBox">
                 <span class="closeBtn" data-close>&times;</span>
                 <div class="modalContent border">
+                  <h3 class="modalHeading">「Mew & I」</h3>
                   <img
                     src="images/websitethumbnail1.png"
                     alt="WEBサイト「Mew and I」サムネイル"
-                    class="thumbnailImage modalImage"
+                    class="modalImage thumbnailImage"
                   />
+
+                  <div class="modalTagArea border">
+                    <p class="tag tag-btn">自主制作</p>
+                    <p class="tag tag-btn">PHP</p>
+                    <p class="tag tag-btn">JS</p>
+                  </div>
+                  <div class="modalLinkArea border">
+                    <a href=""><span class="link tag-btn">→Demoサイト</span></a>
+                    <a href=""><span class="link tag-btn">→Git</span></a>
+                    <a href=""><span class="link tag-btn">→企画書</span></a>
+                  </div>
+
                   <p class="modalDescription">
                     WordPressで保護猫譲渡サイトをオリジナルテーマで作成しました。
                   </p>
-                  <div class="modalTagArea">
-                    <p class="tag tag-btn">自主制作</p>
-                    <p class="tag tag-btn">PHP</p>
-                    <p class="tag tag-btn">JavaScript</p>
-                  </div>
-                  <div class="modalLinkArea">
-                    <a><span class="link tag-btn">→Demoサイト</span></a>
-                    <a><span class="link tag-btn">→Git</span></a>
-                    <a><span class="link tag-btn">→企画書</span></a>
-                  </div>
+                  <span class="scroll">scroll</span>
+                  <p>
+                    テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                  </p>
                 </div>
                 <!--/.modalContent-->
               </div>
